# AgroVision

./: .dockerignore  .env.example  .gitignore  .huggingface_frontmatter  .pre-commit-config.yaml  .rscignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  __init__.py  config.py  dashboard.py  main.py  schemas.py
backend/api/: __init__.py  chat.py  count.py  credentials.py  data.py  deps.py  events.py  fields.py  ndvi.py  profiles.py  vegetation.py  weather.py
backend/core/: __init__.py  detection.py  geometry.py  indices.py  inference.py  metrics.py  ndvi.py  ratelimit.py  schemas.py
backend/db/: migrate.py  repositories.py  session.py
backend/services/: agent.py  parcels.py  remote_sensing.py  tools.py  weather.py
docs/: ejecucion.md
docs/architect/: architecture_agrovision.md  architecture_agrovision_mvp.md  architecture_modelo_conteo_plantas.md
docs/db/: diseno_db.md
docs/reference/: description_proyecto_agrovision.md  description_proyecto_agrovision_mvp.md  description_proyecto_modelo_conteo_plantas.md
frontend/: Dockerfile  __init__.py  app.py  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
models/: .gitkeep
sample_data/: README.md
scripts/: build.ps1  build_ui.ps1  deploy_hf.ps1  deploy_prod.ps1  dev.ps1  inline_js.py  make_sample_orthomosaic.py  run_backend.ps1  run_ui.ps1
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_events.sql  0004_indices.sql  0005_migrate_ndvi_legacy.sql  0006_drop_ndvi_timeseries.sql  0007_enable_rls.sql
tests/: __init__.py
tests/e2e/: __init__.py  test_ui_smoke.py
tests/integration/: __init__.py  test_agent.py  test_api.py  test_db.py  test_security.py  test_teledeteccion.py
tests/unit/: __init__.py  test_config.py  test_deps.py  test_domain_schemas.py  test_events.py  test_geometry.py  test_indices.py  test_inference_mock.py  test_metrics.py  test_ndvi.py  test_profiles.py  test_ratelimit.py  test_remote_sensing.py  test_sample_generator.py  (+3 more)
(+2 files in other folders)
